--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter_svg: ^0.17.4
   keyboard_visibility: ^0.5.6
+  dynamic_theme: ^1.0.1
 
   flutter:
     sdk: flutter
