--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,8 @@ environment:
 
 dependencies:
   flutter_svg: ^0.17.4
-  keyboard_visibility: ^0.5.6
   dynamic_theme: ^1.0.1
+  sliver_fab: "^1.0.0"
 
   flutter:
     sdk: flutter
